test/libsolidity/syntaxTests/nameAndTypeResolution/225_inheriting_from_library.sol
library Lib {}
contract Test is Lib {}
// ----
// TypeError 2571: (32-35): Libraries cannot be inherited from.
